minor cleanup, ready for 1.0
git-svn-id: https://plugins.svn.wordpress.org/analytics360/trunk@135080 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/a360.css
+++ b/css/a360.css
@@ -41,6 +41,10 @@ h2.a360-head {
 	font-weight:bold;
 }
 
+.a360-connection-steps {
+	list-style: none;
+	margin-left: 0;
+}
 .a360-connection-steps .a360-subhead {
 	font-size:20px;
 	color:#00576F;
@@ -95,7 +99,6 @@ h2.a360-head {
 	font-style:normal;
 	font-weight:bold;
 	font-family:Helvetica, Arial, sans-serif;
-	margin-right:40px;
 }
 
 .a360-header-links a {
