compatibility fixes for a 1.1 release - going to do a release candidate first
git-svn-id: https://plugins.svn.wordpress.org/analytics360/trunk@143835 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/a360-ie.css
+++ b/css/a360-ie.css
@@ -44,3 +44,7 @@
 #a360-box-top-referrers .a360-box-content, #a360-box-top-content .a360-box-content {
 	height:333px;
 }
+
+.a360-table-row td, .a360-table-row-hover td, .a360-table-row-odd td, .a360-table-row-selected td {
+	line-height:1em;
+}
