--- a/css/a360.css
+++ b/css/a360.css
@@ -1,5 +1,61 @@
+a {
+	color: #2C9AB7;
+}
+a:hover,
+a:active {
+	color: #52BAD5;
+}
+a:visited {
+	color: #6DC5DC;
+}
+input#a360_api_key {
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+	border-color: #B1E0EC;
+}
+input#a360_api_key:focus {
+	border-color: #6DC5DC;
+}
+input#a360-submit-mc-userpass,
+.mc-button {
+	background: #2C9AB7;
+	border: none;
+	border-bottom: 2px solid #52BAD5;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	color: #fff !important;
+	font-size: 14px;
+	font-weight: 600;
+	height: 30px;
+	margin-top: 2px;
+	padding: 4px 36px 5px;
+	position: relative;
+	text-decoration: none;
+	text-transform: capitalize;
+}
+input#a360-submit-mc-userpass:hover,
+.mc-button:hover {
+	background: #52BAD5;
+	border-color: #6DC5DC;
+	color: #fff !important;
+	cursor: pointer;
+}
+p.submit {
+	margin-top: 0;
+}
 fieldset.options div.option {
-	background: #EAF3FA;
+	background: #C2E4EB;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
 	margin-bottom: 8px;
 	padding: 10px;
 }
@@ -7,6 +63,7 @@ fieldset.options div.option label {
 	display: block;
 	float: left;
 	font-weight: bold;
+	line-height:27px;
 	margin-right: 10px;
 	width: 150px;
 }
@@ -17,7 +74,7 @@ fieldset.options div.option span.help {
 }
 
 h2.a360-head {
-	color:#00576F;
+	color:#449A88;
 	font-size:32px;
 	border-bottom:1px solid #888;
 	margin-top:25px;
@@ -50,7 +107,7 @@ h2.a360-head {
 }
 .a360-connection-steps .a360-subhead {
 	font-size:20px;
-	color:#00576F;
+	color:#449A88;
 	border-bottom: 1px solid #bbb;
 	padding:10px 0;
 	margin-top:25px;
@@ -72,21 +129,11 @@ h2.a360-head {
 	float:left;
 }
 .a360-tabs li {
-	cursor:pointer;
 	float:right;
 	padding:6px 10px;
 	margin-left:8px;
-	background:#c8c8c8;
 	position:relative;
 	top:8px;
-	-moz-border-radius-topleft:4px;
-	-moz-border-radius-topright:4px;
-	-webkit-border-top-left-radius:4px;
-	-webkit-border-top-right-radius:4px;
-}
-.a360-tabs li.a360-selected {
-	background:#00576F;
-	color:#fff;
 }
 .a360-tab-contents {
 	clear:both;
@@ -379,9 +426,10 @@ a.a360-outgoing:hover {
 	background:#EAF7FE;
 }
 .a360-mailchimp-link {
-	background: url(<?php echo plugins_url('/analytics360/images/mailchimp.gif');?>) no-repeat center left;
-	width:104px;
-	height:28px;
+	background: url(<?php echo plugins_url('analytics360/images/mailchimp.png');?>) no-repeat center left;
+	background-size: 100px 26px;
+	width:100px;
+	height:26px;
 	margin-left:8px;
 	position:absolute;
 }
@@ -772,3 +820,5 @@ form.a360-revoke-or-forget {
 }
 
 /*v\:* { behavior: url(#default#VML); }*/
+
+
